# myrmo

./: CMakeLists.txt  LICENSE.txt  README.md
include/myrmo/cache/: disk.h  memory.h  policy.h
include/myrmo/hash/: crc.h  sha1.h
include/myrmo/util/: bits.h
tests/: CMakeLists.txt
tests/cache/: .gitignore  CMakeLists.txt  disk-cache-tests.cpp  memory-cache-tests.cpp
tests/cache/cache_dir/: README.md
tests/hash/: CMakeLists.txt  crc-tests.cpp  long_strings.h  sha1-tests.cpp
tests/hash/test_data/: lorem_ipsum_10_paragraphs.txt  lorem_ipsum_10_paragraphs_raw.txt  random_org_1000_20.txt
tests/include/myrmo/test/: assert.h
